--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "morph_pesy_template",
+  "name": "<PACKAGE_NAME_FULL>",
   "version": "0.1.0",
   "description": "Starter Reason Morph Esy Pesy Project",
   "esy": {
@@ -11,7 +11,7 @@
   "buildDirs": {
     "test": {
       "imports": [
-        "Library = require('./library')",
+        "Library = require('.<PUBLIC_LIB_NAME>')",
         "Rely = require('rely/lib')"
       ],
       "flags": [
@@ -23,10 +23,10 @@
     },
     "testExe": {
       "imports": [
-        "Test = require('./test')"
+        "Test = require('.<TEST_LIB_NAME>')"
       ],
       "bin": {
-        "RunMorphPesyTemplateTests.exe": "RunMorphPesyTemplateTests.re"
+        "Run<PACKAGE_NAME_UPPER_CAMEL>Tests.exe": "Run<PACKAGE_NAME_UPPER_CAMEL>Tests.re"
       }
     },
     "library": {
@@ -40,8 +40,9 @@
     },
     "bin": {
       "imports": [
-        "Library = require('./library')",
+        "Library = require('.<PUBLIC_LIB_NAME>')",
         "Morph = require('morph')",
+        "Morph_base = require('morph_base')",
         "Morph_server_http = require('morph_server_http')",
         "Logs = require('logs')",
         "Logs_fmt = require('logs/fmt')",
@@ -50,13 +51,13 @@
         "Uri = require('uri')"
       ],
       "bin": {
-        "MorphPesyTemplateApp.exe": "MorphPesyTemplateApp.re"
+        "<PACKAGE_NAME_UPPER_CAMEL>App.exe": "<PACKAGE_NAME_UPPER_CAMEL>App.re"
       }
     }
   },
   "scripts": {
-    "start": "esy x MorphPesyTemplateApp.exe",
-    "test": "esy x RunMorphPesyTemplateTests.exe",
+    "start": "esy x <PACKAGE_NAME_UPPER_CAMEL>App.exe",
+    "test": "esy x Run<PACKAGE_NAME_UPPER_CAMEL>Tests.exe",
     "format": "dune build @fmt --auto-promote --root .",
     "doc": "esy dune build @doc",
     "doc-path": "esy echo #{self.target_dir}/default/_doc/_html/index.html"
