--- a/azure-pipelines-template.yml
+++ b/azure-pipelines-template.yml
@@ -1,35 +1,34 @@
 name: Build npm release
 
+variables:
+  esy__ci_cache_version: v1    # this is available to all jobs in env as $ESY__CI_CACHE_VERSION or in azure config as $(esy__ci_cache_version)
+
 trigger:
   - master
+  - global
+  - release-*
+  - releases-*
+  - feature-*
 
 jobs:
   - template: .ci/build-platform.yml
     parameters:
       platform: Linux
       vmImage: ubuntu-16.04
-      STAGING_DIRECTORY: /home/vsts/STAGING
-      STAGING_DIRECTORY_UNIX: /home/vsts/STAGING
-      ESY__CACHE_INSTALL_PATH: /home/vsts/.esy/3_____________________________________________________________________/i
-      ESY__CACHE_SOURCE_TARBALL_PATH: /home/vsts/.esy/source/i
 
   - template: .ci/build-platform.yml
     parameters:
       platform: macOS
-      vmImage: macOS-10.13
-      STAGING_DIRECTORY: /Users/vsts/STAGING
-      STAGING_DIRECTORY_UNIX: /Users/vsts/STAGING
-      ESY__CACHE_INSTALL_PATH: /Users/vsts/.esy/3____________________________________________________________________/i
-      ESY__CACHE_SOURCE_TARBALL_PATH: /Users/vsts/.esy/source/i
+      vmImage: macOS-latest
 
+  # Need windows-2019 to do esy import/export-dependencies
+  # which assumes you have bsdtar (tar.exe) in your system
+  # otherwise it will end up using the esy-bash tar which doesn't
+  # understand drives like D:/ (thinks it's an scp path).
   - template: .ci/build-platform.yml
     parameters:
       platform: Windows
-      vmImage: vs2017-win2016
-      STAGING_DIRECTORY: C:\Users\VssAdministrator\STAGING
-      STAGING_DIRECTORY_UNIX: /C/Users/VssAdministrator/STAGING
-      ESY__CACHE_INSTALL_PATH: /C/Users/VssAdministrator/.esy/3_/i
-      ESY__CACHE_SOURCE_TARBALL_PATH: /C/Users/VssAdministrator/.esy/source/i
+      vmImage: windows-2019
 
   # This job is kept here as we want to have the platform names in the same file
   - job: Release
@@ -39,7 +38,7 @@ jobs:
       - macOS
       - Windows
     pool:
-      vmImage: macOS-10.13
+      vmImage: macOS-latest
       demands: node.js
     steps:
       - template: .ci/cross-release.yml
